--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
-
   <head>
-    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -51,15 +49,15 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">Sujit Packiaraj</a>
+      <a class="navbar-brand" href="#">Sujit Packiaraj</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="https://github.com/sujpac">Github</a>
-          <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="#">Github</a>
+          <a class="nav-link" href="#">Resume</a>
+          <a class="nav-link active" href="#">Blog</a>
         </div>
       </div>
     </div>
@@ -67,48 +65,26 @@
 </header>
 
 <main>
-
-  <section class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="mx-auto">
-        <h1 class="fw-light">Hi, I'm Sujit.</h1>
-        <p class="lead text-muted">Hey, my name is Sujit Packiaraj and I love to make Django websites. It's the thrill of handling the requests that the people want!</p>
-        <p>
-          <a href="mailto:sujitpack@gmail.com" class="btn btn-primary my-2">Email Me</a>
-        </p>
-        <img src="{% static 'sujit.jpg' %}" height="300" width="300" class="img-fluid" />
-      </div>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
+  <div class="container">
+    <h1 class="text-center pt-3">Welcome to Sujit's Blog</h1>
+    <br />
+    <br />
+    <h2>Latest Posts</h2>
+    <hr />
+    {% for blog in blogs.all %}
     <div class="container">
-
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-        {% for job in jobs.all %}
-        <div class="col">
-          <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ job.image.url }}" />
-
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-
-      </div>
+      <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+      <span>{{ blog.pub_date_pretty }}</span>
+      <br />
+      <br />
+      <img class="img-fluid" src="{{ blog.image.url }}" height="200" width="200" />
+      <br />
+      <p>{{ blog.summary }}</p>
+      <br />
+      <br />
     </div>
+    {% endfor %}
   </div>
-
 </main>
 
 <footer class="text-muted py-5">
