--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.79.0">
-    <title>Album example · Bootstrap v5.0</title>
+    <meta name="author" content="">
+    <meta name="generator" content="">
+
+    <title>Sujit's Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
@@ -49,15 +51,15 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Sujit Packiaraj</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Sujit Packiaraj</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="#">Github</a>
-          <a class="nav-link" href="#">Resume</a>
-          <a class="nav-link active" href="#">Blog</a>
+          <a class="nav-link" href="https://github.com/sujpac">Github</a>
+          <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
+          <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
     </div>
@@ -74,10 +76,9 @@
     {% for blog in blogs.all %}
     <div class="container">
       <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
-      <span>{{ blog.pub_date_pretty }}</span>
+      <p>{{ blog.pub_date_pretty }}</p>
+      <img class="img-fluid" src="{{ blog.image.url }}" height="225" width="225" />
       <br />
-      <br />
-      <img class="img-fluid" src="{{ blog.image.url }}" height="200" width="200" />
       <br />
       <p>{{ blog.summary }}</p>
       <br />
