change blog post ordering to descending, set time to pacific standard time

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -72,8 +72,8 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="mx-auto">
-        <h1 class="fw-light">Hi, I'm Sujit.</h1>
-        <p class="lead text-muted">My name is Sujit Packiaraj and I love to make Django websites. It's the thrill of handling the requests that the people want!</p>
+        <h1 class="fw-light">Hi, I'm Sujit Packiaraj.</h1>
+        <p class="lead text-muted">I'm a coder with a passion for well-designed products, clean code, distributed systems, & backend development.<br />I love building things with Python & Django! </p>
         <p>
           <a href="mailto:sujitpack@gmail.com" class="btn btn-primary my-2">Email Me</a>
         </p>
@@ -107,7 +107,7 @@
 
 <footer class="text-muted py-5">
   <div class="container text-center">
-    <p> &copy; Sujit Packiaraj {% now "Y" %}</p>
+    <p> &copy; {% now "Y" %} Sujit Packiaraj</p>
   </div>
 </footer>
 
