--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -76,7 +76,7 @@
     {% for blog in blogs.all %}
     <div class="container">
       <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
-      <p>{{ blog.pub_date_pretty }}</p>
+      <p>{{ blog.pub_date }}</p>
       <img class="img-fluid" src="{{ blog.image.url }}" height="225" width="225" />
       <br />
       <br />
@@ -90,7 +90,7 @@
 
 <footer class="text-muted py-5">
   <div class="container text-center">
-    <p> &copy; Sujit Packiaraj {% now "Y" %}</p>
+    <p> &copy; {% now "Y" %} Sujit Packiaraj</p>
   </div>
 </footer>
 
