--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -81,7 +81,7 @@
 
 <footer class="text-muted py-5">
   <div class="container text-center">
-    <p> &copy; Sujit Packiaraj {% now "Y" %}</p>
+    <p> &copy; {% now "Y" %} Sujit Packiaraj</p>
   </div>
 </footer>
 
