--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -57,7 +57,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="https://github.com/sujpac">Github</a>
+          <a class="nav-link" href="https://github.com/sujpac">GitHub</a>
           <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
           <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </div>
