--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -58,7 +58,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link" href="https://github.com/sujpac">Github</a>
+          <a class="nav-link" href="https://github.com/sujpac">GitHub</a>
           <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
           <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
         </div>
@@ -93,7 +93,12 @@
             <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ job.image.url }}" />
 
             <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
+              <p class="card-text">
+                <b>{{ job.title }}: </b>{{ job.summary }}
+              </p>
+              <p class="card-text">
+                <a href="{{ job.link }}" target="_blank" rel="noopener noreferrer">GitHub</a>
+              </p>
             </div>
           </div>
         </div>
